--- a/src/app/core/components/button/button.component.html
+++ b/src/app/core/components/button/button.component.html
@@ -1,13 +1,17 @@
 <button
   type="button"
   [ngClass]="[
-    currentColor.text,
-    currentColor.bgButton,
-    currentColor.border,
-    currentColor.hoverBg,
-    currentColor.focusRingButton,
-    'flex justify-center items-center gap-2 w-full font-openSans font-bold focus:ring-4  rounded-lg text-sm px-5 py-2.5 me-2 mb-2 focus:outline-none border-2 border-dashed hover:text-white'
+    currentButtonColor.text,
+    currentButtonColor.bgButton,
+    currentButtonColor.border,
+    currentButtonColor.hoverBg,
+    currentButtonColor.focusRingButton,
+    'flex justify-center items-center gap-2 w-full font-openSans font-bold focus:ring-4  rounded-lg text-sm px-5 py-2.5 me-2 mb-2 focus:outline-none border-2 border-dashed hover:text-white [&_mat-icon]:hover:text-white'
   ]"
+  (click)="onClick()"
 >
-  <mat-icon [ngClass]="[currentColor.text]">add</mat-icon> Add new task
+  @if (icon) {
+  <mat-icon [ngClass]="[currentButtonColor.text]">{{ icon }}</mat-icon
+  >}
+  {{ text }}
 </button>
