--- a/src/app/core/components/column/column.component.html
+++ b/src/app/core/components/column/column.component.html
@@ -9,13 +9,9 @@
       >
         {{ taskQuantity }}
       </div>
-      <span
-        [ngClass]="[
-          currentColor.text,
-          'font-openSans text-violet-800 font-bold'
-        ]"
-        >{{ title }}</span
-      >
+      <span [ngClass]="[currentColor.text, 'font-openSans font-bold']">{{
+        title
+      }}</span>
     </div>
     <div class="flex gap-4 items-center">
       <mat-icon [ngClass]="[currentColor.text]">add</mat-icon>
@@ -26,18 +22,11 @@
   <app-task-card [task]="task" />
   }
   <div class="w-full mt-4">
-    <button
-      type="button"
-      [ngClass]="[
-        currentColor.text,
-        currentColor.bgButton,
-        currentColor.border,
-        currentColor.hoverBg,
-        currentColor.focusRingButton,
-        'flex justify-center items-center gap-2 w-full font-openSans font-bold focus:ring-4  rounded-lg text-sm px-5 py-2.5 me-2 mb-2 focus:outline-none border-2 border-dashed hover:text-white'
-      ]"
-    >
-      <mat-icon [ngClass]="[currentColor.text]">add</mat-icon> Add new task
-    </button>
+    <app-button
+      [buttonColor]="taskCategoryColor"
+      [icon]="'add'"
+      [text]="'Add new task'"
+      (buttonClick)="onClickAdd()"
+    />
   </div>
 </div>
