--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,9 @@
 <div class="w-full min-h-full p-12">
   <h1 class="text-3xl font-bold">Angular Todo App by Ali</h1>
-  <section class="w-full mt-6 h-[calc(100vh-156px)] bg-slate-50 rounded-md">
-    <div class="w-full grid grid-cols-4 gap-4 p-4">
+  <section
+    class="w-full mt-6 h-[calc(100vh-156px)] bg-slate-50 rounded-md overflow-x-auto"
+  >
+    <div class="w-full flex gap-4 p-4">
       <!-- Design column -->
       @for (task of groupedTasks; track $index) {
       <app-column
