feat(column): add min-height to column component for improved layout

--- a/src/app/core/components/column/column.component.html
+++ b/src/app/core/components/column/column.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="[currentColor.bg, 'rounded-md p-4 w-80']">
+<div [ngClass]="[currentColor.bg, 'rounded-md p-4 w-80 min-h-full']">
   <div class="flex w-full justify-between items-center p-4">
     <div class="flex items-center gap-4">
       <div
